@@ -1,3 +1,8 @@
+2002-11-26  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* w3m 0.3.2 branch: security fix
+	* frame.c (createFrameFile): html_quote()
+
 2002-11-16  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* w3m 0.3.2 branch: backport from trunk
@@ -4121,4 +4126,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.467.4.2 2002/11/26 07:10:18 ukai Exp $
+$Id: ChangeLog,v 1.467.4.3 2002/11/26 07:11:22 ukai Exp $
